--- a/style.css
+++ b/style.css
@@ -706,7 +706,7 @@ p {
 
   .offer-card .top-section img {
     width: 100%;
-    height: 100%;
+    height: 250px;
     margin-bottom: 10px;
   }
 
