--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ p {
   color: #fafafa;
   padding: 10px 0;
   text-align: justify;
-  transition: .3s all;
+  transition: 0.3s all;
 }
 
 .navbar-nav .nav-link:hover {
@@ -1111,12 +1111,6 @@ p {
     rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
-
-
-
-
-
-
 /* Footer Style  */
 
 /* Footer Section Styling */
@@ -1501,7 +1495,6 @@ p {
     transition: none !important;
   }
 
-
   .popup-content {
     background-color: #fff;
     padding: 30px; /* Adjust padding for better spacing */
@@ -1511,5 +1504,35 @@ p {
     animation: slideIn 0.3s ease; /* Slide in effect */
     border: 2px solid #e8078e;
     margin: 6px;
+  }
+}
+
+/* Back to Top  */
+
+/* Scroll-to-Top Button Styles */
+#scrollToTopButton {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  padding: 10px 18px;
+  font-size: 24px;
+  background-color: #333; /* Dark background */
+  color: #fff; /* White text */
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  display: none; /* Initially hidden */
+  z-index: 1000;
+  transition: opacity 0.3s ease-in-out; /* Smooth show/hide */
+}
+
+#scrollToTopButton:hover {
+  background-color: #555; /* Slightly lighter on hover */
+}
+
+@media (max-width: 600px) {
+  #scrollToTopButton {
+    font-size: 20px;
+    padding: 8px 14px;
   }
 }
